<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FiFoMaster_State" Id="{02505bed-89ec-4a4a-a11e-822b92f6ae67}">
    <Declaration><![CDATA[TYPE ST_FiFoMaster_State :
STRUCT
	sReceiveString			:STRING(255);		
	lrBusAuslastung			:LREAL;
	bBusy					:BOOL;
	bDone					:BOOL;
	bError					:BOOL;
	iFiFoCount				:INT;
	iFiFoRow				:INT;
	sSendString				:STRING(255);
	sState					:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>